# NQ_QtProject_AutomotiveMediaPlayerInfotainment

./: Background.qml  CMakeLists.txt  Main.qml  MyButton.qml  MyProgressbar.qml  README.md  Resource.qrc  main.cpp  musiccontroller.cpp  musiccontroller.h  radiusimage.cpp  radiusimage.h  rsc.qrc
